# Custom_Colours

./: Makefile  README.md  f2py_f2cmap  meson.build  pyproject.toml  setup.py
custom_colours/: __init__.py  filters.py  forward.py  grid.py  inverse.py  io.py  params.py  sed_extinction.py
custom_colours.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
demos/: demo_forward.py  demo_inverse.py  demo_param_modes.py  extinction_prescription_comparison.py  forward_magnitudes.csv  forward_sed.csv  inverse_posterior.npz  sed_extinction.py
fortran/: cc_api.f90  cc_kernels.f90
tests/: test_forward.py  test_inverse.py
